# ghss

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  release-please-config.json  vitest.config.ts
.github/workflows/: pages.yml  release-please.yml  release.yml
docs/superpowers/plans/: 2026-06-12-ghss.md
docs/superpowers/specs/: 2026-06-12-ghss-design.md
site/: index.html  style.css
src/: App.tsx  api.ts  main.tsx  theme.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  diff.rs  lib.rs  main.rs  model.rs  sync.rs
src-tauri/src/github/: client.rs  mod.rs  snapshot.rs  transform.rs
src-tauri/tests/: apply_sync.rs  auth_device.rs  client_core.rs  client_refresh.rs  client_snapshot.rs
src/components/: DiffTree.test.tsx  DiffTree.tsx
src/views/: AuditView.tsx  AuthView.tsx  ExecutionView.tsx  LoadingView.tsx  PreSyncView.tsx  ReposView.tsx  StatusBar.tsx
